src/CompShParser.java
// Generated from CompSh.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CompShParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, PIPE=8, EXCLAMATION=9, 
		LBRACK=10, RBRACK=11, COMMA=12, COLON=13, SEMI=14, TYPE=15, STORE=16, 
		IN=17, STDIN=18, STDOUT=19, STDERR=20, IF=21, THEN=22, ELSE=23, END=24, 
		LOOP=25, WHILE=26, DO=27, UNTIL=28, PLUS=29, MINUS=30, MULT=31, DIV=32, 
		EQ=33, NE=34, LT=35, LE=36, GT=37, GE=38, AND=39, OR=40, NOT=41, BOOLEAN=42, 
		ID=43, INTEGER=44, REAL=45, STRING=46, CHANNEL=47, LINE_COMMENT=48, COMMENT=49, 
		WS=50;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_assignment = 3, 
		RULE_input = 4, RULE_output = 5, RULE_pipeline = 6, RULE_redirect = 7, 
		RULE_command = 8, RULE_channel_selector = 9, RULE_execute_cmd = 10, RULE_store_cmd = 11, 
		RULE_ish_cmd = 12, RULE_expr = 13, RULE_condition = 14, RULE_loop = 15, 
		RULE_expr_list = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "declaration", "assignment", "input", "output", 
			"pipeline", "redirect", "command", "channel_selector", "execute_cmd", 
			"store_cmd", "ish_cmd", "expr", "condition", "loop", "expr_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'^'", "'&'", "'?'", "'$'", "'!!'", "'('", "')'", "'|'", "'!'", 
			"'['", "']'", "','", "':'", "';'", null, "'store'", "'in'", "'stdin'", 
			"'stdout'", "'stderr'", "'if'", "'then'", "'else'", "'end'", "'loop'", 
			"'while'", "'do'", "'until'", "'+'", "'-'", "'*'", "'/'", "'='", "'/='", 
			"'<'", "'<='", "'>'", "'>='", "'and'", "'or'", "'not'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "PIPE", "EXCLAMATION", 
			"LBRACK", "RBRACK", "COMMA", "COLON", "SEMI", "TYPE", "STORE", "IN", 
			"STDIN", "STDOUT", "STDERR", "IF", "THEN", "ELSE", "END", "LOOP", "WHILE", 
			"DO", "UNTIL", "PLUS", "MINUS", "MULT", "DIV", "EQ", "NE", "LT", "LE", 
			"GT", "GE", "AND", "OR", "NOT", "BOOLEAN", "ID", "INTEGER", "REAL", "STRING", 
			"CHANNEL", "LINE_COMMENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CompSh.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CompShParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CompShParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CompShParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CompShParser.SEMI, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 279277600080480L) != 0)) {
				{
				{
				setState(34);
				statement();
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(35);
					match(SEMI);
					}
				}

				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				pipeline();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				input();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				output();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(50);
				condition();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(51);
				loop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(CompShParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CompShParser.ID, i);
		}
		public TerminalNode COLON() { return getToken(CompShParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CompShParser.TYPE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CompShParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CompShParser.COMMA, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(ID);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(55);
				match(COMMA);
				setState(56);
				match(ID);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(COLON);
			setState(63);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PIPE() { return getToken(CompShParser.PIPE, 0); }
		public TerminalNode ID() { return getToken(CompShParser.ID, 0); }
		public TerminalNode STORE() { return getToken(CompShParser.STORE, 0); }
		public TerminalNode IN() { return getToken(CompShParser.IN, 0); }
		public TerminalNode COLON() { return getToken(CompShParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CompShParser.TYPE, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			expr(0);
			setState(66);
			match(PIPE);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STORE) {
				{
				setState(67);
				match(STORE);
				}
			}

			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IN) {
				{
				setState(70);
				match(IN);
				}
			}

			setState(73);
			match(ID);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(74);
				match(COLON);
				setState(75);
				match(TYPE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public TerminalNode STDIN() { return getToken(CompShParser.STDIN, 0); }
		public TerminalNode PIPE() { return getToken(CompShParser.PIPE, 0); }
		public TerminalNode STORE() { return getToken(CompShParser.STORE, 0); }
		public TerminalNode ID() { return getToken(CompShParser.ID, 0); }
		public TerminalNode STRING() { return getToken(CompShParser.STRING, 0); }
		public TerminalNode IN() { return getToken(CompShParser.IN, 0); }
		public TerminalNode COLON() { return getToken(CompShParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CompShParser.TYPE, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(STDIN);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(79);
				match(STRING);
				}
			}

			setState(82);
			match(PIPE);
			setState(83);
			match(STORE);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IN) {
				{
				setState(84);
				match(IN);
				}
			}

			setState(87);
			match(ID);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(88);
				match(COLON);
				setState(89);
				match(TYPE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputContext extends ParserRuleContext {
		public TerminalNode PIPE() { return getToken(CompShParser.PIPE, 0); }
		public TerminalNode STDOUT() { return getToken(CompShParser.STDOUT, 0); }
		public TerminalNode STDERR() { return getToken(CompShParser.STDERR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public Channel_selectorContext channel_selector() {
			return getRuleContext(Channel_selectorContext.class,0);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(92);
				expr(0);
				}
				break;
			case 2:
				{
				setState(93);
				pipeline();
				}
				break;
			}
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(96);
				channel_selector();
				}
				break;
			}
			setState(99);
			match(PIPE);
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==STDOUT || _la==STDERR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PipelineContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> PIPE() { return getTokens(CompShParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(CompShParser.PIPE, i);
		}
		public List<Channel_selectorContext> channel_selector() {
			return getRuleContexts(Channel_selectorContext.class);
		}
		public Channel_selectorContext channel_selector(int i) {
			return getRuleContext(Channel_selectorContext.class,i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitPipeline(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pipeline);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
			case EXCLAMATION:
			case STORE:
			case CHANNEL:
				{
				setState(102);
				command();
				}
				break;
			case T__5:
			case TYPE:
			case PLUS:
			case MINUS:
			case NOT:
			case BOOLEAN:
			case ID:
			case INTEGER:
			case REAL:
			case STRING:
				{
				setState(103);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					match(PIPE);
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 284L) != 0)) {
						{
						setState(107);
						channel_selector();
						}
					}

					setState(112);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__4:
					case EXCLAMATION:
					case STORE:
					case CHANNEL:
						{
						setState(110);
						command();
						}
						break;
					case T__5:
					case TYPE:
					case PLUS:
					case MINUS:
					case NOT:
					case BOOLEAN:
					case ID:
					case INTEGER:
					case REAL:
					case STRING:
						{
						setState(111);
						expr(0);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RedirectContext extends ParserRuleContext {
		public Token src;
		public Token dest;
		public List<TerminalNode> CHANNEL() { return getTokens(CompShParser.CHANNEL); }
		public TerminalNode CHANNEL(int i) {
			return getToken(CompShParser.CHANNEL, i);
		}
		public RedirectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_redirect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterRedirect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitRedirect(this);
		}
	}

	public final RedirectContext redirect() throws RecognitionException {
		RedirectContext _localctx = new RedirectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_redirect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((RedirectContext)_localctx).src = match(CHANNEL);
			setState(120);
			match(T__0);
			setState(121);
			((RedirectContext)_localctx).dest = match(CHANNEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public Execute_cmdContext execute_cmd() {
			return getRuleContext(Execute_cmdContext.class,0);
		}
		public Ish_cmdContext ish_cmd() {
			return getRuleContext(Ish_cmdContext.class,0);
		}
		public Store_cmdContext store_cmd() {
			return getRuleContext(Store_cmdContext.class,0);
		}
		public RedirectContext redirect() {
			return getRuleContext(RedirectContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_command);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXCLAMATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				execute_cmd();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				ish_cmd();
				}
				break;
			case STORE:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				store_cmd();
				}
				break;
			case CHANNEL:
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				redirect();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Channel_selectorContext extends ParserRuleContext {
		public TerminalNode PIPE() { return getToken(CompShParser.PIPE, 0); }
		public Channel_selectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_channel_selector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterChannel_selector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitChannel_selector(this);
		}
	}

	public final Channel_selectorContext channel_selector() throws RecognitionException {
		Channel_selectorContext _localctx = new Channel_selectorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_channel_selector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 284L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Execute_cmdContext extends ParserRuleContext {
		public List<TerminalNode> EXCLAMATION() { return getTokens(CompShParser.EXCLAMATION); }
		public TerminalNode EXCLAMATION(int i) {
			return getToken(CompShParser.EXCLAMATION, i);
		}
		public TerminalNode STRING() { return getToken(CompShParser.STRING, 0); }
		public TerminalNode ID() { return getToken(CompShParser.ID, 0); }
		public TerminalNode LBRACK() { return getToken(CompShParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(CompShParser.RBRACK, 0); }
		public Expr_listContext expr_list() {
			return getRuleContext(Expr_listContext.class,0);
		}
		public Execute_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterExecute_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitExecute_cmd(this);
		}
	}

	public final Execute_cmdContext execute_cmd() throws RecognitionException {
		Execute_cmdContext _localctx = new Execute_cmdContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_execute_cmd);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(EXCLAMATION);
			setState(132);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(133);
			match(EXCLAMATION);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(134);
				match(LBRACK);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 138540075745344L) != 0)) {
					{
					setState(135);
					expr_list();
					}
				}

				setState(138);
				match(RBRACK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Store_cmdContext extends ParserRuleContext {
		public TerminalNode STORE() { return getToken(CompShParser.STORE, 0); }
		public TerminalNode ID() { return getToken(CompShParser.ID, 0); }
		public TerminalNode IN() { return getToken(CompShParser.IN, 0); }
		public TerminalNode COLON() { return getToken(CompShParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CompShParser.TYPE, 0); }
		public Store_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_store_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).enterStore_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompShListener ) ((CompShListener)listener).exitStore_cmd(this);
		}
	}
